--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="task_1_2_1.css">
+<link rel="stylesheet" type="text/css" href="https://github.com/zhongshanxian/task_1_2_1/blob/master/task_1_2_1.css">
 <header>
 <h1>古风</h1>
 <!--导航链接-->
