--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<link rel="stylesheet" type="text/css" href="https://github.com/zhongshanxian/task_1_2_1/blob/master/task_1_2_1.css">
-<header>
+<head>
+   <link rel=stylesheet href="style.css" type="text/css">
+   <title>task_1_2_1</title>
+</head>
 <h1>古风</h1>
 <!--导航链接-->
 <nav>
