--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
    <link rel=stylesheet href="style.css" type="text/css">
    <title>task_1_2_1</title>
 </head>
+<header>
 <h1>古风</h1>
 <!--导航链接-->
 <nav>
