--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+   <link rel=stylesheet href="style.css" type="text/css">
+   <title>task_1_2_1</title>
+</head>
 <header>
 <h1>古风</h1>
 <!--导航链接-->
