--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   <p>密码请为6-16位英文数字</p>
     <div id="sex1">
     <lable>性别：</lable>
-      <input type="radio" checked>男 <input type="radio">女  <br /><br />
+      <input type="radio" name="sex" checked>男 <input type="radio" name="sex">女  <br /><br />
     </div>
     <div>
     <lable>城市：</lable>
